--- a/Commercial Janitorial Services/client/support.html
+++ b/Commercial Janitorial Services/client/support.html
@@ -59,13 +59,17 @@
             class="fixed inset-y-0 left-0 rtl:left-auto rtl:right-0 z-50 w-64 bg-white dark:bg-dark-sidebar border-r rtl:border-r-0 rtl:border-l border-gray-100 dark:border-gray-800 transition-transform duration-300 transform lg:translate-x-0 rtl:lg:translate-x-0 -translate-x-full rtl:translate-x-full">
             <div class="flex flex-col h-full">
                 <!-- Brand -->
-                <div class="p-6">
+                <div class="p-6 flex items-center justify-between">
                     <a href="../index.html" class="flex items-center space-x-3">
                         <div
                             class="w-10 h-10 logo-box rounded-xl flex items-center justify-center text-white text-xl font-bold">
                             N</div>
                         <span class="text-2xl font-bold font-heading dark:text-white">NovaSite</span>
                     </a>
+                    <button id="closeSidebar"
+                        class="lg:hidden p-2 text-gray-500 hover:text-primary-500 transition-colors">
+                        <i class="fa-solid fa-xmark text-xl"></i>
+                    </button>
                 </div>
 
                 <!-- Navigation -->
@@ -78,8 +82,13 @@
                     </a>
                     <a href="services.html"
                         class="flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
-                        <i class="fa-solid fa-sparkles w-6"></i>
+                        <i class="fa-solid fa-hand-sparkles w-6"></i>
                         <span>My Services</span>
+                    </a>
+                    <a href="history.html"
+                        class="flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
+                        <i class="fa-solid fa-clock-rotate-left w-6"></i>
+                        <span>History</span>
                     </a>
                     <a href="billing.html"
                         class="flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
@@ -99,10 +108,41 @@
                         <span>My Profile</span>
                     </a>
                     <a href="../login.html"
-                        class="flex items-center px-4 py-3 text-red-500 hover:bg-red-50 dark:hover:bg-red-900/10 rounded-xl transition-all">
+                        class="hidden lg:flex items-center px-4 py-3 text-red-500 hover:bg-red-50 dark:hover:bg-red-900/10 rounded-xl transition-all">
                         <i class="fa-solid fa-right-from-bracket w-6"></i>
                         <span>Logout</span>
                     </a>
+
+                    <!-- Mobile-only Notifications -->
+                    <a href="#"
+                        class="lg:hidden flex items-center px-4 py-3 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800/50 rounded-xl transition-all">
+                        <i class="fa-solid fa-bell w-6"></i>
+                        <span>Notifications</span>
+                        <span class="ms-auto w-2 h-2 bg-red-500 rounded-full"></span>
+                    </a>
+
+                    <!-- Mobile-only Preferences -->
+                    <div class="lg:hidden mt-8 pt-8 border-t border-gray-100 dark:border-gray-800">
+                        <p class="px-4 text-xs font-semibold text-gray-400 uppercase tracking-wider mb-4">Preferences
+                        </p>
+                        <div class="flex items-center gap-4 px-4">
+                            <button id="theme-toggle"
+                                class="flex-1 w-12 h-12 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors border border-gray-100 dark:border-gray-700">
+                                <i class="fa-solid fa-moon dark:hidden"></i>
+                                <i class="fa-solid fa-sun hidden dark:block"></i>
+                                <span class="ms-2 text-sm font-medium">Theme</span>
+                            </button>
+                            <button id="rtl-toggle"
+                                class="flex-1 w-12 h-12 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors font-bold text-xs border border-gray-100 dark:border-gray-700">
+                                RTL
+                            </button>
+                        </div>
+                        <a href="../login.html"
+                            class="flex items-center px-4 py-3 text-red-500 hover:bg-red-50 dark:hover:bg-red-900/10 rounded-xl transition-all mt-4">
+                            <i class="fa-solid fa-right-from-bracket w-6"></i>
+                            <span>Logout</span>
+                        </a>
+                    </div>
                 </nav>
             </div>
         </aside>
@@ -113,23 +153,24 @@
             <header
                 class="h-16 flex items-center justify-between px-6 bg-white dark:bg-dark-sidebar border-b border-gray-100 dark:border-gray-800">
                 <div class="flex items-center lg:hidden">
-                    <button id="toggleSidebar" class="p-2 text-gray-500 hover:text-primary-500">
-                        <i class="fa-solid fa-bars-staggered text-xl rtl-flip"></i>
+                    <button id="toggleSidebar"
+                        class="w-10 h-10 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800/50 text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 transition-all">
+                        <i class="fa-solid fa-bars text-lg"></i>
                     </button>
-                    <span class="ms-4 font-bold font-heading dark:text-white">NovaSite</span>
+                    <span class="ms-4 font-bold font-heading dark:text-white">Client Dashboard</span>
                 </div>
 
-                <div class="ms-auto flex items-center gap-5 sm:gap-8">
+                <div class="ms-auto flex items-center gap-3 sm:gap-6">
                     <button id="theme-toggle"
-                        class="w-10 h-10 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors">
+                        class="hidden lg:flex w-10 h-10 items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors">
                         <i class="fa-solid fa-moon dark:hidden"></i>
                         <i class="fa-solid fa-sun hidden dark:block"></i>
                     </button>
                     <button id="rtl-toggle"
-                        class="w-10 h-10 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors font-bold text-xs">
+                        class="hidden lg:flex w-10 h-10 items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors font-bold text-xs">
                         RTL
                     </button>
-                    <div class="relative group">
+                    <div class="relative group hidden lg:block">
                         <button id="notifications-toggle"
                             class="w-10 h-10 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors">
                             <i class="fa-solid fa-bell"></i>
@@ -188,9 +229,9 @@
                         </div>
                     </div>
 
-                    <div class="h-8 w-px bg-gray-100 dark:bg-gray-800 mx-1 hidden sm:block"></div>
+                    <div class="h-8 w-px bg-gray-100 dark:bg-gray-800 mx-1 hidden lg:block"></div>
 
-                    <div class="flex items-center gap-3 ps-2">
+                    <div class="hidden lg:flex items-center gap-3 ps-2">
                         <div class="text-right hidden sm:block">
                             <p class="text-sm font-bold dark:text-white leading-none">Robert Smith</p>
                             <p class="text-[10px] text-gray-500 leading-none mt-1">TechCorp Plaza</p>
