--- a/Commercial Janitorial Services/about.html
+++ b/Commercial Janitorial Services/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - NovaSite</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -50,7 +52,7 @@
 <body class="selection:bg-primary-500 selection:text-white dark:bg-dark-body">
 
     <!-- Header Navigation -->
-    <header class="fixed top-0 w-full z-50 bg-white/80 dark:bg-slate-900/80 backdrop-blur-md shadow-sm">
+    <header class="fixed top-0 w-full z-50 bg-white dark:bg-slate-900 shadow-sm">
         <nav class="container mx-auto px-6 py-4 flex items-center justify-between">
             <a href="index.html" class="flex items-center space-x-2">
                 <div
@@ -67,16 +69,16 @@
                 <a href="contact.html" class="hover:text-primary-500 transition-colors dark:text-gray-300">Contact</a>
             </div>
             <div class="flex items-center gap-4">
-                <a href="login.html" class="hidden lg:flex btn btn-nova btn-header">
-                    <span>Login</span>
-                </a>
-                <button id="rtl-toggle" class="btn-icon font-bold text-xs">
+                <button id="rtl-toggle" class="hidden lg:flex btn-icon font-bold text-xs">
                     RTL
                 </button>
-                <button id="theme-toggle" class="btn-icon">
+                <button id="theme-toggle" class="hidden lg:flex btn-icon">
                     <i class="fa-solid fa-moon dark:hidden text-lg"></i>
                     <i class="fa-solid fa-sun hidden dark:block text-lg"></i>
                 </button>
+                <a href="login.html" class="hidden lg:flex btn btn-nova btn-header">
+                    <span>Login</span>
+                </a>
                 <button id="mobile-menu-btn" class="lg:hidden btn-icon">
                     <i class="fa-solid fa-bars text-lg"></i>
                 </button>
@@ -107,6 +109,23 @@
                 <a href="contact.html" class="block text-lg font-medium dark:text-gray-300">Contact</a>
                 <hr class="border-gray-100 dark:border-gray-800">
                 <a href="login.html" class="btn btn-nova btn-full">Login</a>
+
+                <!-- Mobile-only Preferences -->
+                <div class="mt-8 pt-6 border-t border-gray-100 dark:border-gray-800">
+                    <p class="text-xs font-semibold text-gray-400 uppercase tracking-wider mb-4">Preferences</p>
+                    <div class="flex items-center gap-4">
+                        <button id="theme-toggle"
+                            class="flex-1 h-12 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors border border-gray-100 dark:border-gray-700">
+                            <i class="fa-solid fa-moon dark:hidden"></i>
+                            <i class="fa-solid fa-sun hidden dark:block"></i>
+                            <span class="ms-2 text-sm font-medium">Theme</span>
+                        </button>
+                        <button id="rtl-toggle"
+                            class="flex-1 h-12 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors font-bold text-xs border border-gray-100 dark:border-gray-700">
+                            RTL
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -321,6 +340,12 @@
                         <li><a href="contact.html"
                                 class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Contact
                                 Us</a></li>
+                        <li><a href="404.html"
+                                class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Careers</a>
+                        </li>
+                        <li><a href="coming-soon.html"
+                                class="text-gray-500 dark:text-gray-400 hover:text-nova-blue transition-colors">Events</a>
+                        </li>
                     </ul>
                 </div>
                 <div>
@@ -356,9 +381,10 @@
                 <div>
                     <h4 class="text-lg font-bold mb-6 dark:text-white">Newsletter</h4>
                     <p class="text-gray-500 dark:text-gray-400 mb-4">Subscribe to our newsletter for latest updates.</p>
-                    <form class="relative">
+                    <form class="relative newsletter-form">
                         <input type="email" placeholder="Email Address"
-                            class="w-full px-4 py-3 rounded-xl bg-gray-100 dark:bg-gray-800 border-none focus:ring-2 focus:ring-nova-blue dark:text-white outline-none">
+                            class="w-full px-4 py-3 rounded-xl bg-gray-100 dark:bg-gray-800 border-none focus:ring-2 focus:ring-nova-blue dark:text-white outline-none"
+                            required>
                         <button type="submit"
                             class="absolute right-2 top-2 w-10 h-10 bg-nova-blue text-white rounded-lg flex items-center justify-center shadow-lg shadow-blue-500/30">
                             <i class="fa-solid fa-paper-plane"></i>
