--- a/Commercial Janitorial Services/coming-soon.html
+++ b/Commercial Janitorial Services/coming-soon.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon - NovaSite</title>
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -12,8 +13,17 @@
             theme: {
                 extend: {
                     colors: {
-                        primary: { 500: '#3b82f6' },
-                        dark: { card: '#1e293b', body: '#0f172a' }
+                        primary: {
+                            50: '#eff6ff', 100: '#dbeafe', 200: '#bfdbfe', 300: '#93c5fd', 400: '#60a5fa', 500: '#3b82f6', 600: '#2563eb', 700: '#1d4ed8', 800: '#1e40af', 900: '#1e3a8a',
+                        },
+                        dark: {
+                            card: '#1e293b',
+                            body: '#0f172a',
+                        }
+                    },
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                        heading: ['Outfit', 'sans-serif'],
                     }
                 }
             }
@@ -21,58 +31,113 @@
     </script>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        .glass-card {
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .animate-float {
+            animation: float 6s ease-in-out infinite;
+        }
+
+        @keyframes float {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-20px);
+            }
+        }
+    </style>
 </head>
 
-<body class="bg-dark-body text-white min-h-screen flex items-center justify-center p-6 relative overflow-hidden">
+<body class="bg-dark-body text-white h-screen flex items-center justify-center p-6 relative overflow-hidden">
 
     <!-- Background Decoration -->
-    <div class="absolute top-0 left-0 w-full h-full opacity-10">
-        <div class="absolute top-1/4 left-1/4 w-96 h-96 bg-primary-500 rounded-full blur-[150px]"></div>
-        <div class="absolute bottom-1/4 right-1/4 w-96 h-96 bg-purple-500 rounded-full blur-[150px]"></div>
+    <div class="absolute inset-0 z-0 pointer-events-none">
+        <div
+            class="absolute top-[-10%] left-[-10%] w-[50%] h-[50%] bg-primary-600/20 rounded-full blur-[120px] animate-pulse">
+        </div>
+        <div class="absolute bottom-[-10%] right-[-10%] w-[50%] h-[50%] bg-purple-600/20 rounded-full blur-[120px] animate-pulse"
+            style="animation-delay: 2s;"></div>
     </div>
 
-    <div class="text-center relative z-10 max-w-2xl">
-        <div class="flex items-center justify-center space-x-3 mb-12">
-            <div
-                class="w-12 h-12 gradient-vivid rounded-2xl flex items-center justify-center text-white text-2xl font-bold">
-                N</div>
-            <span class="text-4xl font-bold font-heading">NovaSite</span>
+    <div class="container max-w-4xl mx-auto relative z-10">
+        <div class="flex flex-col items-center justify-center text-center">
+
+            <!-- Logo Section -->
+            <a href="index.html" class="flex items-center space-x-2 mb-4 group">
+                <div
+                    class="w-8 h-8 logo-box rounded-lg flex items-center justify-center text-white text-lg font-bold transition-all duration-500 group-hover:rotate-[360deg] shadow-lg shadow-primary-500/20">
+                    N</div>
+                <span class="text-xl font-bold font-heading">NovaSite</span>
+            </a>
+
+            <!-- Heading & Progress -->
+            <div class="mb-4 space-y-2">
+                <span
+                    class="inline-block px-2 py-0.5 rounded-full bg-primary-500/10 text-primary-400 text-[10px] font-bold tracking-widest uppercase border border-primary-500/20">
+                    Launching Soon
+                </span>
+                <h1 class="text-3xl lg:text-5xl font-black font-heading leading-tight tracking-tight">
+                    Innovating <br>
+                    <span class="text-transparent bg-clip-text gradient-vivid">Commercial Care</span>
+                </h1>
+                <p class="text-sm text-gray-400 max-w-lg mx-auto leading-relaxed">
+                    Our elite service platform is in final refinement.
+                </p>
+            </div>
+
+            <!-- Countdown Grid -->
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-3 mb-6 w-full max-w-xl">
+                <div class="glass-card p-3 rounded-2xl transform hover:scale-105 transition-all duration-300">
+                    <span
+                        class="text-2xl font-black font-heading gradient-primary bg-clip-text text-transparent block">14</span>
+                    <span class="text-[9px] text-gray-500 uppercase font-bold tracking-[0.2em]">Days</span>
+                </div>
+                <div class="glass-card p-3 rounded-2xl transform hover:scale-105 transition-all duration-300">
+                    <span
+                        class="text-2xl font-black font-heading gradient-primary bg-clip-text text-transparent block">08</span>
+                    <span class="text-[9px] text-gray-500 uppercase font-bold tracking-[0.2em]">Hours</span>
+                </div>
+                <div class="glass-card p-3 rounded-2xl transform hover:scale-105 transition-all duration-300">
+                    <span
+                        class="text-2xl font-black font-heading gradient-primary bg-clip-text text-transparent block">25</span>
+                    <span class="text-[9px] text-gray-500 uppercase font-bold tracking-[0.2em]">Mins</span>
+                </div>
+                <div class="glass-card p-3 rounded-2xl transform hover:scale-105 transition-all duration-300">
+                    <span
+                        class="text-2xl font-black font-heading gradient-primary bg-clip-text text-transparent block">44</span>
+                    <span class="text-[9px] text-gray-500 uppercase font-bold tracking-[0.2em]">Secs</span>
+                </div>
+            </div>
+
+            <!-- Newsletter Interaction -->
+            <div class="w-full max-w-md glass-card p-1.5 rounded-2xl">
+                <form class="flex flex-col sm:flex-row items-center gap-2 newsletter-form">
+                    <input type="email" placeholder="Enter your email" required
+                        class="w-full sm:flex-1 px-4 py-3 rounded-xl bg-white/5 border-none text-white text-sm outline-none focus:ring-2 focus:ring-primary-500 transition-all placeholder:text-gray-500">
+                    <button type="submit"
+                        class="w-full sm:w-auto px-6 py-3 gradient-primary text-white text-sm font-bold rounded-xl shadow-lg shadow-primary-500/30 hover:shadow-primary-500/50 hover:scale-[1.02] active:scale-[0.98] transition-all flex items-center justify-center gap-2">
+                        <span>Notify Me</span>
+                        <i class="fa-solid fa-paper-plane text-[10px]"></i>
+                    </button>
+                </form>
+            </div>
         </div>
-
-        <h1 class="text-5xl lg:text-7xl font-black font-heading mb-8">We're Launching <br><span
-                class="text-transparent bg-clip-text gradient-primary">Very Soon</span></h1>
-        <p class="text-lg text-gray-400 mb-12">Our new service management platform is almost ready. Sign up to get
-            notified when we go live and receive an exclusive early-bird discount.</p>
-
-        <!-- Countdown Placeholder -->
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mb-16">
-            <div class="p-6 bg-white/5 backdrop-blur-md rounded-3xl border border-white/10">
-                <span class="text-4xl font-bold block">14</span>
-                <span class="text-xs text-gray-500 uppercase font-bold tracking-widest">Days</span>
-            </div>
-            <div class="p-6 bg-white/5 backdrop-blur-md rounded-3xl border border-white/10">
-                <span class="text-4xl font-bold block">08</span>
-                <span class="text-xs text-gray-500 uppercase font-bold tracking-widest">Hours</span>
-            </div>
-            <div class="p-6 bg-white/5 backdrop-blur-md rounded-3xl border border-white/10">
-                <span class="text-4xl font-bold block">25</span>
-                <span class="text-xs text-gray-500 uppercase font-bold tracking-widest">Minutes</span>
-            </div>
-            <div class="p-6 bg-white/5 backdrop-blur-md rounded-3xl border border-white/10">
-                <span class="text-4xl font-bold block">44</span>
-                <span class="text-xs text-gray-500 uppercase font-bold tracking-widest">Seconds</span>
-            </div>
-        </div>
-
-        <form class="flex flex-col sm:flex-row items-center justify-center gap-4">
-            <input type="email" placeholder="Enter your email"
-                class="w-full sm:w-80 px-6 py-4 rounded-2xl bg-white/10 border-white/10 text-white outline-none focus:ring-2 focus:ring-primary-500 transition-all">
-            <button
-                class="w-full sm:w-auto px-10 py-4 gradient-primary text-white font-bold rounded-2xl shadow-xl shadow-primary-500/30 hover:scale-105 transition-all">Notify
-                Me</button>
-        </form>
     </div>
 
+    <!-- Scripts -->
+    <script src="assets/js/main.js"></script>
+    <script>
+        // Simple visual countdown update logic can be added here
+        // For now, it stays static as requested or becomes part of another task
+    </script>
 </body>
 
 </html>
