--- a/Commercial Janitorial Services/sanitization-services.html
+++ b/Commercial Janitorial Services/sanitization-services.html
@@ -36,7 +36,7 @@
 <body class="selection:bg-primary-500 selection:text-white dark:bg-dark-body">
 
     <!-- Header Navigation -->
-    <header class="fixed top-0 w-full z-50 bg-white/80 dark:bg-slate-900/80 backdrop-blur-md shadow-sm">
+    <header class="fixed top-0 w-full z-50 bg-white dark:bg-slate-900 shadow-sm">
         <nav class="container mx-auto px-6 py-4 flex items-center justify-between">
             <a href="index.html" class="flex items-center space-x-2">
                 <div
@@ -53,11 +53,11 @@
                 <a href="contact.html" class="hover:text-primary-500 transition-colors dark:text-gray-300">Contact</a>
             </div>
             <div class="flex items-center space-x-4">
-                <button id="theme-toggle" class="btn-icon">
+                <button id="theme-toggle" class="hidden lg:flex btn-icon">
                     <i class="fa-solid fa-moon dark:hidden text-lg"></i>
                     <i class="fa-solid fa-sun hidden dark:block text-lg"></i>
                 </button>
-                <button id="rtl-toggle" class="btn-icon font-bold text-xs">
+                <button id="rtl-toggle" class="hidden lg:flex btn-icon font-bold text-xs">
                     RTL
                 </button>
                 <button id="mobile-menu-btn" class="lg:hidden btn-icon">
@@ -93,6 +93,23 @@
                 <a href="contact.html" class="block text-lg font-medium dark:text-gray-300">Contact</a>
                 <hr class="border-gray-100 dark:border-gray-800">
                 <a href="login.html" class="btn btn-nova btn-full">Login</a>
+
+                <!-- Mobile-only Preferences -->
+                <div class="mt-8 pt-6 border-t border-gray-100 dark:border-gray-800">
+                    <p class="text-xs font-semibold text-gray-400 uppercase tracking-wider mb-4">Preferences</p>
+                    <div class="flex items-center gap-4">
+                        <button id="theme-toggle"
+                            class="flex-1 h-12 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors border border-gray-100 dark:border-gray-700">
+                            <i class="fa-solid fa-moon dark:hidden"></i>
+                            <i class="fa-solid fa-sun hidden dark:block"></i>
+                            <span class="ms-2 text-sm font-medium">Theme</span>
+                        </button>
+                        <button id="rtl-toggle"
+                            class="flex-1 h-12 flex items-center justify-center rounded-xl bg-gray-50 dark:bg-gray-800 dark:text-white hover:bg-gray-100 transition-colors font-bold text-xs border border-gray-100 dark:border-gray-700">
+                            RTL
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -185,7 +202,8 @@
                                 Are the chemicals safe for electronics?
                                 <i class="fa-solid fa-chevron-down text-sm text-gray-400"></i>
                             </h4>
-                            <p class="mt-4 text-gray-500 dark:text-gray-400">Yes, we use specialized application methods
+                            <p class="mt-4 text-gray-500 dark:text-gray-400 hidden">Yes, we use specialized application
+                                methods
                                 that are safe for IT equipment and sensitive electronics when used correctly.</p>
                         </div>
                         <div
@@ -194,7 +212,8 @@
                                 How often should we sanitize?
                                 <i class="fa-solid fa-chevron-down text-sm text-gray-400"></i>
                             </h4>
-                            <p class="mt-4 text-gray-500 dark:text-gray-400">We recommend daily touch-point sanitization
+                            <p class="mt-4 text-gray-500 dark:text-gray-400 hidden">We recommend daily touch-point
+                                sanitization
                                 and periodic deep disinfection depending on your facility's foot traffic.</p>
                         </div>
                     </div>
